# claude-ops

./: .gitignore  README.md  package-lock.json  package.json
.claude-flow/metrics/: performance.json  task-metrics.json
.claude-ops/sessions/: 4a940b19-642b-4266-85ed-5d0b53788a05.json  58997967-0999-41c1-abd7-9c1e786830d8.json  9c4e00bf-a11f-4df9-8db6-f8ff82406d33.json  bc68f020-1d18-422e-b86a-a62d886aa95e.json
.swarm/: memory.db
agents/: README.md  architecture-director.md  business-director.md  design-director.md  documentation-director.md  engineering-director.md  operations-director.md  research-director.md  security-director.md
docs/: claude_flow_queenbee_architecture.md  director_queenbee_spawn_commands.md
memory-bank/active/: hive-progress.json
memory-bank/constitutional/: CONSTITUTION.md
memory-bank/core/: EXECUTION_POLICY.md
memory-bank/feature_lists/: TEMPLATE.json  active.json
memory-bank/index/: memory-index.md
memory-bank/progress_log/: 2025-12-18.md  TEMPLATE.md
memory-bank/sops/: HANDOFF_PROTOCOL.md  SOP-MULTI-TEAM-AGENT-ORCHESTRATION.md  SUBAGENT_SPAWNING.md  TEAM_INITIATION.md
playbooks/: INDEX.md
playbooks/advanced/: director-async.md
playbooks/core/: director-init.md
scripts/: tmux-orchestrator.sh
scripts/validation/: daily-constitutional-check.sh  validate-weekly-operations.sh
security-wasm/: Cargo.toml
security-wasm/src/: lib.rs  prompt_guard.rs  routing_guard.rs  sanitizer.rs
src/commands/: code.js  feature.js  handoff.js  hive.js  init.js  orchestrate.js  progress.js  (+3 more)
subagents/: README.md
teams/: README.md
(+76 files in other folders)
